[package]
name = "grast"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.7.4"
axum-streams = { version = "0.12.0", features = ["text"] }
futures = "0.3.28"
openai = "1.0.0-alpha.10"
qdrant-client = "1.2.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.96"
shuttle-axum = "0.43.0"
shuttle-qdrant = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-secrets = "0.42.0"
tokio = "1.28.2"
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = "1.3.3"
